# double-repo-pytest

repo1/: pyproject.toml
repo1/src/repo1/: lib.py
repo2/: Dockerfile  Makefile  pyproject.toml
repo2/app/: main.py
repo2/tests/: test_main.py
