[project]
name = "repo1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lantgabor", email = "lant.gabor98@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
