[project]
name = "repo2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "repo1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[tool.uv.sources]
repo1 = { path = "../dist/repo1-0.1.0-py3-none-any.whl" }


